--- a/SalesInventorySystem/POSStandAloneSetup/POSStandAloneSettingsBoard.resx
+++ b/SalesInventorySystem/POSStandAloneSetup/POSStandAloneSettingsBoard.resx
@@ -467,45 +467,77 @@
   </data>
   <data name="button18.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAD3RFWHRUaXRsZQAzRENvbHVt
-        bjveAhubAAAIgklEQVRYR72XaVSU1xnHbcxm1rbf+r0fGnPS5tikHmusaWqT426UoIhKxah1B0HZQVBk
-        EERAFBGYACL7zLAMu2yKGLfUY4OA1hWQnWFRGdZ/n+d531mS2pxjP5Rzfufemffe//O/z33ee4dp6t9L
-        xPQX4OX/kVdUuM86PyOmvZSmv16Tnv8P/BRnGMNz0HP7HdIY/X8nVWfhuqDNuVKrmpg2XZt7Df/vv4SM
-        b0GxORvTXk7OUQyMjU1idGxCxdLn1h7ludluDPfN1DePqs+o/SmmpqYQn36JDbwqBhKzr2KKDNgHeB4S
-        RFoF+f5H4iPPaUdGx9XP3I5jkgyctDdwOvMKuYIqyitRViNwMPuWBCzPFHEV8zjarqTixukFP0CC07MR
-        s2qEWjZwIq2BDbzGBl5JyLisGPiRuK2vfG8RsAR9prYc4E5VFu4WeGKiNV54VOqD6sBleEbP7HnKBian
-        cDz1os3AqbPfigEWMhOWABJMDVj1XStCzlz9ASJKz26fy8TdkjBMDtQJHLwhfC3O+S2hgBR0hAPTWG4J
-        NhCTcsFmgPeDDTyjFbIgC7MZi+uM8iZE6v+J+vanwvHiFjh4FagrGkd98DL0Vx5CX+VBPG0qREOYk1Dh
-        vVAJPjJmbZ88G8MEGYjWnmcDr7OBV0+caZDKtAQU1yq62rs4VdSIe4NjwnFjM1xCKrHS06CKjuN80BL0
-        VQSjr/wAnt4yoD5sNeoPOyI5UvMfWRu2GEiusxmIS7sohcFinCZJlVlxvTG0GnGXuokuVN8fhktwBVwO
-        VGD5Xh2eqCurDViI3rJA4cn3ebgQ+hWOhYQiqqDRmrXYoiY4+RvFwPjEFKISa9nADDbwWiztB++LpIgE
-        Wbj1copUscvBKhxv6BKq7g1jQ1C5sHRPnqSTqfb9Ar3FfoQvntzMRtzhI0gsacL9oTGBg6+nOY4+RRgS
-        A5OIPG1nIEarGBBBCn6rOAUtObukmtdTumMvdgqVd4ewLrBMWLQzW1Yz/JQMeC9Aj9Gb8MLwjQx8ralT
-        s9aNmgfD1jkO+wswROPZQMSpapuB6OTzsi8s+L1Ri2ZDEFVzreBMzqPrOxB9oQPldwbhHFBKlOCL7Vmy
-        Ghas3PcZegr2oafQE0PXU+EaViMZi+Ws0bbxeJ63wlOPQRo/Nj6J8PgqNvAGG3g9KqnOaoDFuKD6K6ig
-        Gg1woonHzj8WSloG4ORXLCzYclaCDz0ZQ4XHp+g27BWGrmqlbmIoYwxnzcmvBGv9S7DULQ8DNH6UDGhO
-        nLMZOEr7MUGFwYIVHvPRWxpA+Mt+OvoW42htu2BsNmGNrxFrfIz489dnRGyQKHefhy7dHnQTQ5cTqG7O
-        4RhljOGs8RwngrdNDNBpGxZXyQbeZAMzIhNqpDJZrMztE/TSfvbKfqZjlVcRImracKS6DYW3+uHoXQRH
-        +m7+xlQaPyqCpbvnoit3pzDYcALr6E2JoowdrVOytpqKbw3N+3xbBkzDioHQ2AqbgbATlbIv/LBk1xz0
-        5HuiO98Dw9e0WOGRD01VKzTnHkHf2IevqJCYTzZ8Q+NHYRoaRfHO2ejM3iYM1sdiLRVcBGUsoqYdRU0D
-        ZLhA+MvmdPQPmeVkPXCsjA28JQZCj1eIKxYz7pgtqWQGKZ1L3fQ4XPkQoRUPkXuzFw77DFjlmY85zskk
-        NioYt/8BnRlb0Jm5Gaa6o1hNex5OGdNUt8LQ2E+G84X5rqnoHzTTYTeBoKMlVgNvHKJ0KAbMKNz6EaVy
-        BzpztmPgYhztWy5Cyu4TD5B5oxsrPfRYuVeP2U6JJEYGSLBg6+/RcXYTOtI3wVQTTsd0EcIqH5HxR8i7
-        2UeGDXJyctb6aDwfXgGRYuBtMRASXUbX7aSspmDLLFrJVmILBmg1n2/LQlDJPeHMtU6scNdhOfGR42kS
-        GxXB/M2z0JG2kfgb3Qeh+JIydLD8gZB1oxdfkmE2PmdtEnoHFAP+kcVWA28GswH6DcCr0W/6Ha3GlVbj
-        ClO1Bp9tPgv/on8JKVc6sGxPLpYTsxziRYzhOY9TNxDr5RVe4qbDgdL7Qvr1LjHNfLz6NHoGRujAG4df
-        eJHNQFBUqRRGH4npNn6ADhHbQJdLCP60MQ0+BXfgTSReaseSXdnChytPWg3oXD/A42+c0U70lvhj4c4c
-        BBTfI+4i5WoHltP7z8ZnOZxCj8lM5w0Z0IiBd9jAW4FUEFwYLJbn8j7atWsJJxGbuz4F+w0t2K9vQXx9
-        G9VEFhbtyMJvl8ehl8R6LHOSnYjV9Pr64K9/z4IfZcy3UDG9dFeOwKa7TSNy4PmEFdoM+EcUyzXMBnI2
-        zER7oiPaiJ7C/ZhN++aR14S9ec2IrWvFwu0ZmEtvwJHkelrNiJC73janm47kTzelwyv/Nhm/jZNkejGZ
-        nkcFeER7EV00ng8878Ni4F028LZfhFEKg8WynX+DtoRVaCW6De742DEBe3KaiFuIqn6IPzolITz5gqzE
-        QvY6ZU5bggPNccM8lxR4UsY8dM2IqXuEueu0NKdegneZnsl94BWab2cg3CjXMItlrvk1Ehb+ysqHK+Mx
-        c3Es3lscg/cWxUCTZAvOYoz9eGaOsxbvL4nFTIbmapLq0clj+0fQ2a8Y2HdIDPxcDPhqCuUaZoc2cfsg
-        yufn9xUTLGxF/WwJaP8dY6Lj2/OgwWrgHd4PrkybuCqsikhrEeVWfaYI2gWx+65D7Xf0EXbPuG+iO8Qz
-        RG/LgNdh+qGg3u1W6DOnyp4BaekCIvgiUi4jBRaVu8HSt/9OMAv91O+ndm+wzcCM3f4ZdR4hBniQKwUd
-        DdDBnQa5B+fB/QARlAe3oFzsYQKJgBzsDszBLmqZnf7ZCn5Z2OHLZGIH9bdTK/hkYhvjnSG4uiVdoNhy
-        G/K/5vzTiN9JrkqGnb0Iv3gBfknwHAo+bfq/AY4yfJSrL6FpAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAPdEVYdFRpdGxlADNEQ29sdW1uO94CG5sAAAiCSURB
+        VFhHvZdpVJTXGcdtzGbWtt/6vR8ac9Lm2KQea6xpapPjbpSgiErFqHUHQdlBUGQQREAUEZgAIvvMsAy7
+        bIoYt9Rjg4DWFZCdYVEZ1n+f53nfWZLanGM/lHN+596Z997/87/Pfd57h2nq30vE9Bfg5f+RV1S4zzo/
+        I6a9lKa/XpOe/w/8FGcYw3PQc/sd0hj9fydVZ+G6oM25UquamDZdm3sN/++/hIxvQbE5G9NeTs5RDIyN
+        TWJ0bELF0ufWHuW52W4M983UN4+qz6j9KaamphCffokNvCoGErOvYooM2Ad4HhJEWgX5/kfiI89pR0bH
+        1c/cjmOSDJy0N3A68wq5girKK1FWI3Aw+5YELM8UcRXzONqupOLG6QU/QILTsxGzaoRaNnAirYENvMYG
+        XknIuKwY+JG4ra98bxGwBH2mthzgTlUW7hZ4YqI1XnhU6oPqwGV4Rs/secoGJqdwPPWizcCps9+KARYy
+        E5YAEkwNWPVdK0LOXP0BIkrPbp/LxN2SMEwO1AkcvCF8Lc75LaGAFHSEA9NYbgk2EJNywWaA94MNPKMV
+        siALsxmL64zyJkTq/4n69qfC8eIWOHgVqCsaR33wMvRXHkJf5UE8bSpEQ5iTUOG9UAk+MmZtnzwbwwQZ
+        iNaeZwOvs4FXT5xpkMq0BBTXKrrauzhV1Ih7g2PCcWMzXEIqsdLToIqO43zQEvRVBKOv/ACe3jKgPmw1
+        6g87IjlS8x9ZG7YYSK6zGYhLuyiFwWKcJkmVWXG9MbQacZe6iS5U3x+GS3AFXA5UYPleHZ6oK6sNWIje
+        skDhyfd5uBD6FY6FhCKqoNGatdiiJjj5G8XA+MQUohJr2cAMNvBaLO0H74ukiARZuPVyilSxy8EqHG/o
+        EqruDWNDULmwdE+epJOp9v0CvcV+hC+e3MxG3OEjSCxpwv2hMYGDr6c5jj5FGBIDk4g8bWcgRqsYEEEK
+        fqs4BS05u6Sa11O6Yy92CpV3h7AusExYtDNbVjP8lAx4L0CP0ZvwwvCNDHytqVOz1o2aB8PWOQ77CzBE
+        49lAxKlqm4Ho5POyLyz4vVGLZkMQVXOt4EzOo+s7EH2hA+V3BuEcUEqU4IvtWbIaFqzc9xl6Cvahp9AT
+        Q9dT4RpWIxmL5azRtvF4nrfCU49BGj82Ponw+Co28AYbeD0qqc5qgMW4oPorqKAaDXCiicfOPxZKWgbg
+        5FcsLNhyVoIPPRlDhcen6DbsFYauaqVuYihjDGfNya8Ea/1LsNQtDwM0fpQMaE6csxk4SvsxQYXBghUe
+        89FbGkD4y346+hbjaG27YGw2YY2vEWt8jPjz12dEbJAod5+HLt0edBNDlxOobs7hGGWM4azxHCeCt00M
+        0GkbFlfJBt5kAzMiE2qkMlmszO0T9NJ+9sp+pmOVVxEiatpwpLoNhbf64ehdBEf6bv7GVBo/KoKlu+ei
+        K3enMNhwAuvoTYmijB2tU7K2mopvDc37fFsGTMOKgdDYCpuBsBOVsi/8sGTXHPTke6I73wPD17RY4ZEP
+        TVUrNOceQd/Yh6+okJhPNnxD40dhGhpF8c7Z6MzeJgzWx2ItFVwEZSyiph1FTQNkuED4y+Z09A+Z5WQ9
+        cKyMDbwlBkKPV4grFjPumC2pZAYpnUvd9Dhc+RChFQ+Re7MXDvsMWOWZjznOySQ2Khi3/wGdGVvQmbkZ
+        prqjWE17Hk4Z01S3wtDYT4bzhfmuqegfNNNhN4GgoyVWA28conQoBswo3PoRpXIHOnO2Y+BiHO1bLkLK
+        7hMPkHmjGys99Fi5V4/ZTokkRgZIsGDr79FxdhM60jfBVBNOx3QRwiofkfFHyLvZR4YNcnJy1vpoPB9e
+        AZFi4G0xEBJdRtftpKymYMssWslWYgsGaDWfb8tCUMk94cy1Tqxw12E58ZHjaRIbFcH8zbPQkbaR+Bvd
+        B6H4kjJ0sPyBkHWjF1+SYTY+Z20SegcUA/6RxVYDbwazAfoNwKvRb/odrcaVVuMKU7UGn20+C/+ifwkp
+        VzqwbE8ulhOzHOJFjOE5j1M3EOvlFV7ipsOB0vtC+vUuMc18vPo0egZG6MAbh194kc1AUFSpFEYfiek2
+        foAOEdtAl0sI/rQxDT4Fd+BNJF5qx5Jd2cKHK09aDehcP8Djb5zRTvSW+GPhzhwEFN8j7iLlageW0/vP
+        xmc5nEKPyUznDRnQiIF32MBbgVQQXBgslufyPtq1awknEZu7PgX7DS3Yr29BfH0b1UQWFu3Iwm+Xx6GX
+        xHosc5KdiNX0+vrgr3/Pgh9lzLdQMb10V47AprtNI3Lg+YQV2gz4RxTLNcwGcjbMRHuiI9qInsL9mE37
+        5pHXhL15zYita8XC7RmYS2/AkeR6Ws2IkLveNqebjuRPN6XDK/82Gb+Nk2R6MZmeRwV4RHsRXTSeDzzv
+        w2LgXTbwtl+EUQqDxbKdf4O2hFVoJboN7vjYMQF7cpqIW4iqfog/OiUhPPmCrMRC9jplTluCA81xwzyX
+        FHhSxjx0zYipe4S567Q0p16Cd5meyX3gFZpvZyDcKNcwi2Wu+TUSFv7Kyocr4zFzcSzeWxyD9xbFQJNk
+        C85ijP14Zo6zFu8vicVMhuZqkurRyWP7R9DZrxjYd0gM/FwM+GoK5RpmhzZx+yDK5+f3FRMsbEX9bAlo
+        /x1jouPb86DBauAd3g+uTJu4KqyKSGsR5VZ9pgjaBbH7rkPtd/QRds+4b6I7xDNEb8uA12H6oaDe7Vbo
+        M6fKngFp6QIi+CJSLiMFFpW7wdK3/04wC/3U76d2b7DNwIzd/hl1HiEGeJArBR0N0MGdBrkH58H9ABGU
+        B7egXOxhAomAHOwOzMEuapmd/tkKflnY4ctkYgf1t1Mr+GRiG+OdIbi6JV2g2HIb8r/m/NOI30muSoad
+        vQi/eAF+SfAcCj5t+r8BjjJ8lKsvoWkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button19.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABidJREFUSEuV
+        lglUzXkUxxuMMc2M4TDOzBkajN2UbSRMQ0PMUaRSkyQlsqSXIq/d1kKW6pGIkoqU0t6rXputkha9ViVR
+        jZEWjxZJfOf+/u+P44wxZ+453/O2e7+f3733//7vKfxXqG6MG0H6nSQk+cyxjBeRXEkrSCNJn/Cp/y/I
+        TFl9a+JZfWfJQztR3iuv0GL4RUoRcLkcJ2LK4R5S/NrM40rbb4LkGILMI/XjSz8elNifzK1WOUueCf1z
+        4UjaKboOpxN52HemAN5hxRBFluJ0XAUiJbU4n1YDgW/uc6o7RPqMt/lwUILi/C0JZ809smHpmQlj11SY
+        75dgi3c27HyvyiFB7yCBceU4l1yF2Jw6iKLKoGGdlEgew3m794M+6Ddvc0KwmXvWax37JCyzTYCeMBkm
+        u9NgRQCbo1exw+8anAPysD/4Fg6FF+NYFINUIDSlGjFZdxGUWPWaIMkf7ITGYmjoIoGmdSzULaOxeFss
+        3E7lo6DyER789Qx3G2VIuVFPXeTC9WQ+3Aly5HwJjl+S4kx8BcLEBMm+Cx/aEwGceVt5kPlwWla99o5E
+        TDe5AFXzSBy5UIJnXS/Q9bwX3Uw9LzlV32+HK4FdCOJx9p+QxGv1MPPIkRFkPG/PjcfC0DkdkwzDMNUo
+        nLqIQ5vsOTq7e1FY1cx1wYF4SNyVOtgfu8516BlSiKN0GP/oMgQlVCJcfIeNCr9aJXrx9goK9EKyRBCP
+        MbohmLAqFA7+NzjzVoKs3Z0O0z0StDzp5syfv+hDTYMM22knDnSF7Q68CS+C+ETcRkBMGYIJwpau45Be
+        S5MZyMYzbKltSvNM0wiMWh6MsQTZd+YmB2DKKmxCxq1GflRyQENzB6wOX8MOUS6E/nl0hd3AevdM6NNF
+        ob4pGnPWR0FHmNpF3soMoLJiV2r3eDr5SO1gjNY5B2O3dHTwgE4y7iLjN+ru6YO0rh0GrpnQEKRg+roY
+        TDCMwGjdMCitCOE8lFacha5DKshbiwHmrxSmvhqzMgSjKIElTjK6iOvSRzzgnTkTe936tAfb/AoweW08
+        Jq65jPFGl/CjwUWM0QuHEh1QaflbgDFb8GwC9I5fFUYJYVziBOMYLBSkIbP4EXXCjPs4seed9Mgk6+iF
+        4FgRflqfgsmmCVRzGeP+iMIY/fO0y1DoyQF6DPCDlr34yQzTqLfmU6hAeYMYatZZWHuwCK6hd7D9VCVW
+        H7iNgjsy6oBdvn1okfXA7mQpVDamYapZEiaZxHIQNgFdx7SXBJjHAAM0BEmViwRJZB6NKevk5jO2ZGK2
+        9VWo2eZivn0B1IWFWOBQBO19pXAOrUM7ddBF+2AQ2wApplmmY6p5EiYShO4IWGonbiaA/LYxd1P8Yba0
+        yabxULYQYyaZq9pcw/ydN7HAsRiLXEqxZHcZlu4tJ1VgyZ5yOIbVcwAmWVcvtopuyyHUia5TJn7ZmhjL
+        mbOgLlR0HCWd6jYSTN+cgdkCMqdTL3QqgSYZa3lUYeXBGqw6fJeTnnctDA7XICizGa3P5J0cT6jHzK1Z
+        ULWSwNAtu488tXh7+S2aFGjimQs1wRXMtcsn82LupMu97sDI5x7MTzTAMrAJm043weJkI9aI6glWi/iC
+        NuRWP4XpkTLMoa5NPPPZiNLJ7/0bHr0xREOQXMWWutCxEIvdpND2rMZq33vYfOZP7DzfDJdLrXCNboPD
+        xcewDnmIdf4PoOtdw42OHcj4QAmW7khrIS8l3vb9oA9UNO1Say18pFjuUcmNY8OpRggjHsMz4Ql80zog
+        knTgUPJTuBLMKvghjOkAOl7VWO9bAS1hRjt5LOPtPhyUMG7BtuTbm/xKYRPcwJ10b2w7jmd04lzuC4Tn
+        v0BgTjcOJsm4rmxDmrAtoBKLtotrqHYOb/PxoERF0i5tYUbjrqAq+CU/xoX8biRK+yCueIXooh4EpNO4
+        Qmuh75bzhHLZz+Uwvvxfg/1oDyQpkr4kfT34+2mTRs4ytv/ZyC990ZYL9/WdxC0GzmktS6wjm1TX+Oco
+        qZnv/Wai5qwBgwYP4WtYLfP44B+A/iS2+S9IX/FihezLMrz/QMURg79THkvQcZ9+PvTbN++ThpLe5LPa
+        QSTmRaGg8DdmQ7G5ypzk/QAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
