--- a/SalesInventorySystem/Orders/POForApprovalSTS.resx
+++ b/SalesInventorySystem/Orders/POForApprovalSTS.resx
@@ -289,4 +289,7 @@
         MU8ZnsmRH2zIIS5DAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="contextMenuStripForApproval.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>296, 17</value>
+  </metadata>
 </root>
